development/back-pdf.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back-pdf-deployment
  namespace: development
spec:
  selector:
    matchLabels:
      app: back-pdf
  replicas: 1
  template:
    metadata:
      labels:
        app: back-pdf
    spec:
      containers:
      - name: back-pdf
        image: ghcr.io/bright-co/bright-resume-back-pdf:f5c5b2f26a31b86b543420082ade494b424f8111
        ports:
          - containerPort: 4001
