development/back.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back-deployment
  namespace: development
spec:
  selector:
    matchLabels:
      app: back
  replicas: 1
  template:
    metadata:
      labels:
        app: back
    spec:
      containers:
      - name: back
        image: ghcr.io/bright-co/bright-resume-back:9cbc9237d726d6aeebda0679012bcb5408b3ca7a
        ports:
          - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: back-service
  namespace: development
spec:
  selector:
    app: back
  ports:
  - port: 80
    protocol: TCP
    targetPort: 4000
