development/gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-deployment
  namespace: development
spec:
  selector:
    matchLabels:
      app: gateway
  replicas: 1
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
      - name: gateway
        image: ghcr.io/bright-co/bright-resume-back-gateway:ce15f589a5aef04c8956fa059b1b46f720c34c43
        ports:
          - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  namespace: development
spec:
  selector:
    app: gateway
  ports:
  - port: 80
    protocol: TCP
    targetPort: 4000
