development/mongo-auth.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo-auth
  namespace: development
spec:
  serviceName: mongo-auth-service-headless
  replicas: 1
  selector:
    matchLabels:
      app: mongo-auth
  template:
    metadata:
      labels:
        app: mongo-auth
    spec:
      containers:
      - name: mongo-auth
        image: mongo:latest
        ports:
        - containerPort: 27017
          name: mongo
        volumeMounts:
        - name: mongo-auth-data
          mountPath: /data/db
      volumes:
      - name: mongo-auth-data
        persistentVolumeClaim:
          claimName: mongo-auth-data-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-auth-service
  namespace: development
spec:
  selector:
    app: mongo-auth
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
  clusterIP: None
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-auth-service-headless
  namespace: development
spec:
  selector:
    app: mongo-auth
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
  clusterIP: None
