development/resume-template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resume-template-deployment
  namespace: development
spec:
  selector:
    matchLabels:
      app: resume-template
  replicas: 1
  template:
    metadata:
      labels:
        app: resume-template
    spec:
      containers:
      - name: resume-template
        image: ghcr.io/bright-co/bright-resume-resume-template:295def617de552d278ba312f721727581817561e
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: resume-template-service
  namespace: development
spec:
  selector:
    app: resume-template
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
