development/resume.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resume-deployment
  namespace: development
spec:
  selector:
    matchLabels:
      app: resume
  replicas: 1
  template:
    metadata:
      labels:
        app: resume
    spec:
      containers:
      - name: resume
        image: ghcr.io/bright-co/bright-resume-back-resume:30b5e83d0f338080fbbf3dee0198a8a596c2d34d
        ports:
          - containerPort: 4002
---
apiVersion: v1
kind: Service
metadata:
  name: resume-service
  namespace: development
spec:
  selector:
    app: resume
  ports:
  - port: 80
    protocol: TCP
    targetPort: 4002
