development/web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
  namespace: development
spec:
  selector:
    matchLabels:
      app: web
  replicas: 3
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: ghcr.io/bright-co/bright-resume-web:fa049fbb5546fc79a5186c1eb1fa600f22aecb12
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: development
spec:
  selector:
    app: web
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
