development/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: index-ingress
  namespace: development
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  tls:
  - hosts:
    - back-development.bright-resume.com
    - cms-development.bright-resume.com
    secretName: index-certificate-secret
  rules:
  - host: back-development.bright-resume.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: gateway-service
            port: 
              number: 80
  - host: cms-development.bright-resume.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: cms-service
            port: 
              number: 80
